--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.13.3",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.17.0"
   }
 }
