--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "reset-db": "node ./src/scripts/resetDatabase.js",
+    "reset-db": "node ./src/resetDatabase.js",
     "dev": "nodemon app.js"
   },
   "author": "",
