--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "express-handlebars": "^8.0.3",
     "joi": "^17.13.3",
     "mongoose": "^8.13.3",
     "nodemon": "^3.1.10",
