feat: consolidate API architecture and fix expense generation logic
- Unified validation middlewares into single validation.middleware.js
- Fixed Compra expense generation to use just-in-time approach (generate only when due)
- Implemented proper transaction handling in all expense generation methods
- Consolidated duplicate route files - removed 4 redundant API route files
- Fixed route duplications in index.routes.js (/gastos and /gastos/all)
- Updated all validation schemas with proper field names (monto_total, fecha_inicio)
- Cleaned up 6 obsolete middleware files
- Updated unit tests to reflect new architecture and transaction handling
- Improved error handling and logging throughout the application

Breaking changes:
- Removed individual route files (gastoUnico.routes.js, debitoAutomatico.routes.js, etc.)
- All API routes now consolidated in index.routes.js
- Middleware imports updated to use unified validation.middleware.js

--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "test:watch": "node --experimental-vm-modules node_modules/.bin/jest --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
+    "test:debug": "node --inspect-brk --experimental-vm-modules node_modules/.bin/jest --runInBand",
+    "test:setup": "cp env.test .env.test && npm run docker:up && sleep 30 && npm run seed-db:test",
     "start": "node app.js",
     "reset-db": "docker-compose down -v && docker-compose up -d",
     "seed-db": "node ./src/db/seed.js",
+    "seed-db:test": "NODE_ENV=test node ./src/db/seed.js",
     "dev": "nodemon app.js",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
@@ -19,6 +24,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
     "joi": "^17.13.3",
@@ -28,5 +34,9 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4"
   }
 }
